# hack4u

./: README.md  docker-compose.yml  exploring.md  linux-basics.md  linux-directory-structure.md  networking.md  notas.txt  shortcuts.md
gui/: main.py  (+5 more)
src/attacker-archlinux/: README.md  TODO.md  cheatsheet.md  exploring.md  local-netowrking.md  pyproject.toml
src/attacker-archlinux/learning/: notas.md  notas.txt
src/attacker-archlinux/learning/notes/bash/: parrot.md  tricks.md
src/attacker-archlinux/learning/scripts/: README.md  get_private_ip.sh
src/attacker-archlinux/learning/scripts/ruleta/: ruleta.sh
src/attacker-archlinux/materials/: bash_basics.md  bash_find.md  bash_useful_commands.md  devcontainer_2_google.md  unix-directory-structure.md
src/attacker-archlinux/projects/202311_casino_roulette/: ruleta.sh
src/attacker-archlinux/projects/202311_list-htbmachines/: README.md  htbmachines.sh
src/attacker-archlinux/projects/202401_python_client_server_communications/: README.md
src/attacker-archlinux/projects/202401_python_client_server_communications/src/: server.py
src/attacker-archlinux/projects/202401_python_multiuser_chat/chat/: encrypt.md  server-cert.pem
src/attacker-archlinux/projects/202402_port_scanner/: README.md
src/attacker-archlinux/projects/202403_arp_spoofer/: arp_spoofer.py
src/attacker-archlinux/projects/arp_spoofer/: arp_spoofer.py
src/attacker-archlinux/projects/gui/: gui_1.py
src/attacker-archlinux/projects/gui/chat/: server-key.key
src/attacker-archlinux/projects/icmp_network_scanner/: icmp_network_scanner.py
src/attacker-archlinux/tools/bash-grab-host-local-ip-ranges/: README.md
src/attacker-archlinux/tools/bash-grab-host-local-ips/: grabHostLocalIPs.sh
src/attacker-archlinux/tools/bash-grab-local-ip/: README.md  grabLocalIP.sh
src/attacker-archlinux/tools/bash-grab-local-ip-ranges/: grabLocalIPRanges.sh
src/attacker-archlinux/tools/bash-host-discovery/: README.md  hostScan.sh
src/attacker-archlinux/tools/bash-lan-host-discovery/: hostScan.sh
src/attacker-archlinux/tools/bash-port-discovery/: README.md
src/attacker-archlinux/tools/bash/colors/: color_green.sh
src/attacker-archlinux/tools/bash/networking/: get_lan_hosts_nmap.sh  (+9 more)
src/attacker-archlinux/tools/nmap-lan-host-port-discovery/: hostPortDiscovery.sh
src/attacker-archlinux/tools/python/: get_host_ifaces_ips.py
(+55 files in other folders)
